# mxl-player-components

./: .gitignore  .typos.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  cog.toml  icons.toml  justfile
.github/workflows/: check.yml
.github/workflows/mxl-setup/: action.yml
docker/: Dockerfile
i18n/en/: mxl_player_components.ftl
src/: actions.rs  glib_helpers.rs  gst_helpers.rs  lib.rs  localization.rs  misc.rs  player.rs  uri_helpers.rs
src/ui/: mod.rs
src/ui/codec_ranking/: messages.rs  mod.rs  model.rs  widget.rs
src/ui/message_dialog/: messages.rs  model.rs  widget.rs
src/ui/player/: messages.rs  model.rs  widget.rs
src/ui/playlist/: factory.rs  messages.rs  mod.rs  model.rs  widget.rs
src/ui/video_offsets_dialog/: messages.rs  model.rs  widget.rs
tests/: playback_test.rs
tests/player/: about.rs  app.rs  init.rs  mod.rs
